# AIM-TH

./: .gitignore  CMakeLists.txt  Makefile  README.md
SquareLine/WiFiSquareLine/: WiFiSquareLine.sll  WiFiSquareLine.spj
SquareLine/WiFiSquareLine/code/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1656806725.c  ui_img_home2_png.c  ui_img_home3_png.c  ui_img_home_png.c  ui_img_network_png.c  ui_img_search_wifi_png.c  ui_img_wifi_1_png.c
components/lvgl/: lv_conf.h
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c  touch_driver.h
doc/web/: app.js  index.html  style.css
main/: CMakeLists.txt  main.c
main/APIs/HTTP_SERVER/: http_server.c
main/APIs/SMB/: app_smb.c  app_smb.h
main/APIs/SPIFFS/: app_spiffs.c  app_spiffs.h
main/APIs/WIFI_API/: wifi_app.c  wifi_app.h
main/local_components/aim/: aim.c  aim.h
main/local_components/buttons/: buttons.c  buttons.h
main/local_components/event_router/: event_router.c  event_router.h
main/local_components/led/: toggleLed.c  toggleLed.h
main/local_components/light/: light.c  light.h
main/local_components/ui/: ui.c  ui.h
main/local_components/ui/img/: ui_img_1656806725.c  ui_img_home3_png.c  ui_img_network_png.c  ui_img_search_wifi_png.c  ui_img_wifi_1_png.c
main/local_components/ui/screen/wifi_screen/: ui_wifi_screen.c  ui_wifi_screen.h
